--- a/Style.css
+++ b/Style.css
@@ -15,6 +15,15 @@ h1, h2, p {
   padding: 0;
 }
 
+h1 {
+  font-size: 40px;
+  
+}
+
+#last-try {
+  padding: 5px;
+}
+
 button {
   padding: 10px 20px;
   font-size: 16px;
